# rex

./: .gitignore  .travis.yml  Bench.hs  CHANGES  CHANGES.md  Demo.hs  LICENSE  README  README.md  Test.hs  changelog.md  rex.cabal  stack.yaml  test.hs  typed-regex.cabal
Text/Regex/PCRE/: Precompile.hs  QQT.hs  Rex.hs
